clusters/homelab/apps/outline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: outline
  labels:
    expose-public: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
