clusters/homelab/apps/outline/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: outline-ingress
  namespace: outline
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: outline
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
